add select event